--- a/alx-rick-and-morty-app/package.json
+++ b/alx-rick-and-morty-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.8",
+    "@sentry/nextjs": "^10.22.0",
+    "@sentry/react": "^10.22.0",
     "graphql": "^16.11.0",
     "next": "16.0.0",
     "react": "19.2.0",
